--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -8,7 +8,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  background-color: #242424;
+  background-color: var(--ui-background);
   color: var(--ui-text);
 
   font-synthesis: none;
@@ -49,31 +49,31 @@ a {
   text-decoration: inherit;
 }
 
-body {
-  margin: 0;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-#root {
-  max-width: 600px;
-}
-
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  outline: none;
+  transition: all 0.15s ease;
+  border: 2px solid transparent;
 }
-button:hover {
-  border-color: var(--ui-);
+button:active {
+  transform: scale(0.9);
+  background-color: var(--ui-background);
+  border: 2px solid var(--ui-border);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+body {
+  margin: 0;
+  min-width: 320px;
+  max-width: 700px;
+  min-height: 100vh;
+}
+
+@media (min-width: 1024px) {
+  body {
+    place-items: center;
+  }
 }
