--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -1,16 +1,6 @@
-@import "tailwindcss";
-
-@theme {
-  --color-text: var(--ui-text);
-  --color-text-foreground: var(--ui-text-foreground);
-  --color-background: var(--ui-background);
-  --color-foreground: var(--ui-foreground);
-  --color-border: var(--ui-border);
-  --color-footer: var(--ui-footer);
-  --color-highlight: var(--ui-highlight);
-  --color-lowlight: var(--ui-lowlight);
-  --color-gradient: var(--ui-gradient);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   line-height: 1.5;
@@ -18,7 +8,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  background-color: #242424;
+  background-color: var(--ui-background);
   color: var(--ui-text);
 
   font-synthesis: none;
@@ -51,43 +41,39 @@
   }
 }
 
+* {
+  font-size: 1rem;
+}
+
 a {
-  font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  outline: none;
+  transition: all 0.15s ease;
+  border: 2px solid transparent;
 }
-button:hover {
-  border-color: var(--ui-);
+button:active {
+  transform: scale(0.9);
+  background-color: var(--ui-background);
+  border: 2px solid var(--ui-border);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+body {
+  margin: 0;
+  min-width: 320px;
+  max-width: 700px;
+  min-height: 100vh;
+}
+
+@media (min-width: 1024px) {
+  body {
+    place-items: center;
+  }
 }
