feat: add transaction management components and integrate drawer for transaction list

--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -49,6 +49,11 @@
   }
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--ui-border) var(--ui-background);
+}
+
 a {
   text-decoration: inherit;
 }
