--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -74,23 +74,26 @@ button:active {
   border: 2px solid var(--ui-border);
 }
 
-body {
+html {
   margin: 0;
-  width: 100%;
+  width: 100vw;
   min-width: 320px;
   max-width: 700px;
   min-height: 100vh;
 }
 
+body {
+  width: 100%;
+}
+
 @media (min-width: 1024px) {
-  body {
+  html {
     width: 100%;
     margin: 0 auto;
     max-width: 1024px;
     padding-bottom: 100px;
   }
 }
-
 
 @layer base {
   :root {
